--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "express": "^4.21.2",
     "node-pty": "^1.0.0",
     "nodemon": "^3.1.9",
+    "p-queue": "^8.1.0",
     "socket.io": "^4.8.1",
     "strip-ansi": "^7.1.0"
   }
