--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@xterm/xterm": "^5.5.0",
     "ace-builds": "^1.37.5",
     "diff-match-patch": "^1.0.5",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-ace": "^14.0.1",
     "react-dom": "^19.0.0",
