--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "chokidar": "^4.0.3",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "diff-match-patch": "^1.0.5",
     "express": "^4.21.2",
